<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_item"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/trends_item"
        android:enabled="true"
        android:icon="@drawable/trends"
        android:title="@string/trends"/>
    <item
        android:id="@+id/market_item"
        android:enabled="true"
        android:icon="@drawable/market"
        android:title="@string/market"/>
    <item
        android:id="@+id/qr_scanner_item"
        android:enabled="true"
        android:icon="@drawable/qr_scanner"
        android:title="@string/qr_scanner"/>
    <item
        android:id="@+id/user_item"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/user"/>
</menu>